--- a/css/main.css
+++ b/css/main.css
@@ -297,7 +297,7 @@ ul.disc li::before {
 	width: 8px;
 	height: 8px;
 	border-radius: 50%;
-	background: #FF0077;
+	background: #00cc6d;
 	position: absolute;
 	left: -17px;
 	top: 11px;
@@ -305,7 +305,7 @@ ul.disc li::before {
 }
 dt {
 	margin: 0;
-	color: #FF0077;
+	color: #00cc6d;
 }
 dd {
 	margin: 0 0 0 2rem;
@@ -425,7 +425,7 @@ img.pull-left {
 	display: none;
 }
 .pace .pace-progress {
-	background: #FF0077;
+	background: #00cc6d;
 	position: fixed;
 	z-index: 900;
 	top: 0;
@@ -468,7 +468,7 @@ img.pull-left {
 	border-top: 11px solid rgba(255, 255, 255, 0.1);
 	border-right: 11px solid rgba(255, 255, 255, 0.1);
 	border-bottom: 11px solid rgba(255, 255, 255, 0.1);
-	border-left: 11px solid #FF0077;
+	border-left: 11px solid #00cc6d;
 	-webkit-animation: load 1.1s infinite linear;
 	animation: load 1.1s infinite linear;
 	display: block;
@@ -590,8 +590,8 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 select:focus {
-	color: #cc005f;
-	border-bottom: 1px solid #FF0077;
+	color: #00cc6d;
+	border-bottom: 1px solid #00cc6d;
 }
 label, legend {
 	font-family: "poppins-bold", sans-serif;
@@ -921,7 +921,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 	color: #252525;
 }
 .stats-tabs li a:hover {
-	color: #FF0077;
+	color: #00cc6d;
 }
 .stats-tabs li a em {
 	display: block;
@@ -1111,7 +1111,7 @@ header .logo a {
 	margin:0px 0px 0px 10px;
 	margin-bottom:20px;
 	border: none;
-	text-shadow:2px 2px 2px #cc005f;
+	text-shadow:2px 2px 2px #00cc6d;
 	color: white;
 	/* width: 100%; */
 	height: 100%;
@@ -1141,7 +1141,7 @@ header{
 }
 .menu-toggle span {
 	display: block;
-	background-color: #FF0077;
+	background-color: #00cc6d;
 	width: 24px;
 	height: 3px;
 	margin-top: -1.5px;
@@ -1199,7 +1199,7 @@ header{
 	background-color: rgba(255, 0, 119, 0);
 }
 .menu-toggle.is-clicked span::before, .menu-toggle.is-clicked span::after {
-	background-color: #ff0077;
+	background-color: #00cc6d;
 	-moz-transition-delay: 0s, 0.2s;
 	-o-transition-delay: 0s, 0.2s;
 	-webkit-transition-delay: 0s, 0.2s;
@@ -1255,12 +1255,12 @@ header{
 	border: none;
 }
 .main-navigation li a:hover {
-	color: #FF0077;
+	color: #00cc6d;
 	padding-left: 1rem;
 }
 .main-navigation li.current > a {
 	background: none;
-	color: #FF0077;
+	color: #00cc6d;
 }
 
 /**
@@ -1297,7 +1297,7 @@ header{
  * ------------------------------------------------------------------- 
  */
 #intro {
-	background: #151515 url(../images/bgg.jpg) no-repeat center bottom;
+	background: #151515 url(../images/portfolio/CLGpjpto.jpeg) no-repeat center bottom;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
@@ -1387,7 +1387,7 @@ header{
 	letter-spacing: .25rem;
 }
 .intro-content .button:hover, .intro-content .button:focus {
-	border-color: #cc005f;
+	border-color: #00cc6d;
 }
 .intro-content .button::after {
 	display: inline-block;
@@ -1419,7 +1419,7 @@ header{
 	color: #FFFFFF;
 }
 .intro-social li a:hover, .intro-social li a:focus {
-	color: #cc005f;
+	color: #00cc6d;
 }
 
 /**
@@ -1632,7 +1632,7 @@ header{
 	text-align: center;
 }
 #resume .resume-header h2 {
-	color: #FF0077;
+	color: #00cc6d;
 }
 
 #resume .resume-timeline {
@@ -1959,7 +1959,7 @@ header{
 	border-right: 1px solid rgba(200, 200, 200, 0.1);
 }
 .popup-modal .link-box a:hover {
-	background: #cc005f;
+	background: #00cc6d;
 	border: none;
 }
 @media only screen and (max-width:600px) {
@@ -2085,7 +2085,7 @@ header{
 	color: white;
 }
 #services .section-intro h5 {
-	color: #FF0077;
+	color: #00cc6d;
 }
 #services .section-intro p {
 	color: rgba(255, 255, 255, 0.7);
@@ -2107,7 +2107,7 @@ header{
 }
 .services-list .icon i {
 	font-size: 5.4rem;
-	color: #FF0077;
+	color: #00cc6d;
 }
 .services-list h3 {
 	color: #FFFFFF;
@@ -2135,7 +2135,7 @@ header{
 	background: #FFFFFF;
 }
 .owl-theme .owl-controls .owl-page.active span {
-	background: #FF0077;
+	background: #00cc6d;
 }
 
 
@@ -2146,7 +2146,7 @@ header{
  * ------------------------------------------------------------------- 
  */
 #stats {
-	background: #990047;
+	background: #00cc6d;
 	padding-top: 7.2rem;
 	padding-bottom: 6rem;
 	text-align: center;
@@ -2221,7 +2221,7 @@ header{
 	color: white
 }
 #contact .section-intro h5 {
-	color: #FF0077;
+	color: #00cc6d;
 }
 #contact .section-intro p {
 	color: rgba(255, 255, 255, 0.7);
@@ -2274,7 +2274,7 @@ header{
 	padding: 0 2rem;
 	margin: 0;
 	color: #FFFFFF;
-	background: #FF0077;
+	background: #00cc6d;
 }
 #contact form .form-field label::after {
 	position: absolute;
@@ -2283,7 +2283,7 @@ header{
 	margin-top: -6px;
 	border-top: 5px solid transparent;
 	border-bottom: 5px solid transparent;
-	border-right: 5px solid #FF0077;
+	border-right: 5px solid #00cc6d;
 	content: "";
 }
 #contact input[type="text"],
@@ -2305,7 +2305,7 @@ header{
 #contact input[type="text"]:focus,
 #contact input[type="password"]:focus,
 #contact input[type="email"]:focus {
-	border-color: #FF0077;
+	border-color: #00cc6d;
 	color: #FFFFFF;
 }
 #contact textarea {
@@ -2313,7 +2313,7 @@ header{
 	padding: 1.8rem 2rem;
 }
 #contact textarea:focus {
-	border-color: #FF0077;
+	border-color: #00cc6d;
 	color: #FFFFFF;
 }
 #contact button.submitform {
@@ -2325,11 +2325,11 @@ header{
 	padding: 0 3rem;
 	margin-top: 4.8rem;
 	width: 100%;
-	background: #FF0077;
+	background: #00cc6d;
 	color: #FFFFFF;
 }
 #contact button.submitform:hover, #contact button.submitform:focus {
-	background: #cc005f;
+	background: #00cc6d;
 }
 #message-warning, #message-success {
 	display: none;
@@ -2340,10 +2340,10 @@ header{
 	width: 100%;
 }
 #message-warning {
-	color: #fa0003;
+	color: #00cc6d;
 }
 #message-success {
-	color: #FF0077;
+	color: #00cc6d;
 }
 #message-warning i, #message-success i {
 	margin-right: 10px;
@@ -2388,7 +2388,7 @@ header{
 	color: #FFFFFF;
 }
 .contact-info h5 {
-	color: #FF0077;
+	color: #00cc6d;
 }
 
 /**
@@ -2462,7 +2462,7 @@ footer a, footer a:visited {
 	color: #FFFFFF;
 }
 footer a:hover, footer a:focus {
-	color: #FF0077;
+	color: #00cc6d;
 }
 footer .row {
 	max-width: 900px;
@@ -2541,7 +2541,7 @@ footer .copyright span:last-child::after {
 	width: 6rem;
 	line-height: 6.6rem;
 	text-align: center;
-	background: #cc005f;
+	background: #00cc6d;
 	color: #FFFFFF;
 	text-align: center;
 	text-transform: uppercase;
